--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -26,7 +26,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header div  {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -88,6 +88,7 @@ p {
     background-color: #2589bd;
 }
 
+/* Sets position of sidebar elements with class selector */
 .benefit-lead, 
 .benefit-brand, 
 .benefit-cost {
@@ -95,6 +96,7 @@ p {
     color: #ffffff;
 }
 
+/* Centers headers of sidebar text elements with class selector */
 .benefit-lead h3,     
 .benefit-brand h3, 
 .benefit-cost h3 {
@@ -102,6 +104,7 @@ p {
     text-align: center;
 }
 
+/* Sets margins and size images of sidebar elements with class selector to block */
 .benefit-lead img, 
 .benefit-brand img, 
 .benefit-cost img {
@@ -110,6 +113,7 @@ p {
     max-width: 150px;
 }
 
+/* Content Section container attributes */
 .search-engine-optimization, 
 .online-reputation-management, 
 .social-media-marketing {
@@ -121,12 +125,14 @@ p {
     color: #ffffff;
 }
 
+/* Content Section images height size */
 .search-engine-optimization img, 
 .online-reputation-management img, 
 .social-media-marketing img {
     max-height: 200px;
 }
 
+/* Content Section header sizes and positions */
 .search-engine-optimization h2, 
 .online-reputation-management h2, 
 .social-media-marketing h2 {
