--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -10,6 +10,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Header elements */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -48,10 +49,7 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
-
+/* Hero Section */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +57,33 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+/* Content Section 
+ Content Section container attributes */
+.search-engine-optimization, 
+.online-reputation-management, 
+.social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* Content Section images height size */
+.search-engine-optimization img, 
+.online-reputation-management img, 
+.social-media-marketing img {
+    max-height: 200px;
+}
+
+/* Content Section header sizes and positions */
+.search-engine-optimization h2, 
+.online-reputation-management h2, 
+.social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .float-left {
@@ -77,6 +102,12 @@ p {
     margin-left: 20px;
 }
 
+
+p {
+    font-size: 16px;
+}
+
+/* Side Bar Section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -113,33 +144,7 @@ p {
     max-width: 150px;
 }
 
-/* Content Section container attributes */
-.search-engine-optimization, 
-.online-reputation-management, 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/* Content Section images height size */
-.search-engine-optimization img, 
-.online-reputation-management img, 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-/* Content Section header sizes and positions */
-.search-engine-optimization h2, 
-.online-reputation-management h2, 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* Footer */
 .footer {
     padding: 30px;
     clear: both;
